--- a/scripts/analysis.qmd
+++ b/scripts/analysis.qmd
@@ -8,6 +8,205 @@ format: html
 library(tidyverse)
 library(bibliometrix)
 
-reg_data <- read_csv("data/processed_data.csv")
-bib_data <- read.csv("data/all_1020.csv")
+data_reg<- read_csv("data/processed_data.csv")
+data_bib <- read.csv("data/all_1020.csv")
+```
+
+## Number of outputs per year by type of cooperation.
+
+1990 is selected as a cutoff year as before this year, the number of outputs is minimal.
+Number of outputs by bilateral cooporation always higher than multilateral cooporation, until 2019.
+
+```{r}
+data_reg |> 
+  select(year, coop) |>
+  na.omit() |> 
+  filter(year > 1990) |> 
+  ggplot(aes(x = year, fill = coop)) +
+  geom_bar(position = "dodge") +
+  theme_bw()
+```
+
+## Number of outputs per year by OA
+
+Number of OA paper increased sharply after 2010, surpassed non-OA paper after 2017.
+
+```{r}
+data_reg |>
+  select(year, OA) |> 
+  na.omit() |>
+  filter(year > 1990) |>
+  group_by(year, OA) |>
+  summarise(Count = n(), .groups = "drop") |>
+  ggplot(aes(x = year, y = Count, color = OA)) +
+  geom_line(linewidth = 1) +
+  theme_bw()
+
+data_reg |>
+  select(year, OA, coop) |> 
+  na.omit() |>
+  filter(year > 1990) |>
+  group_by(year, OA, coop) |>
+  summarise(Count = n(), .groups = "drop") |>
+  ggplot(aes(x = year, y = Count, color = OA)) +
+  geom_line(linewidth = 1) +
+  theme_bw() +
+  facet_wrap(~coop)
+```
+
+## Number of outputs per year by domains
+
+Physical sciences domain lead the outputs, has been the one start first and still top leading.
+Social Sciences fields are much more humble.
+
+```{r}
+data_reg |>
+  filter(year > 1990) |>
+  select(year, LS, SS, PS, HS) |>
+  pivot_longer(cols = LS:HS, names_to = "Category", values_to = "Value") |>
+  filter(Value == 1) |>
+  group_by(year, Category) |>
+  summarise(Count = n(), .groups = "drop") |>
+  ggplot(aes(x = year, y = Count, color = Category)) +
+  geom_line(linewidth = 1) +
+  theme_bw()
+
+data_reg |>
+  filter(year > 1990) |>
+  select(year, OA, LS, SS, PS, HS) |>
+  na.omit() |> 
+  pivot_longer(cols = LS:HS, names_to = "Category", values_to = "Value") |>
+  filter(Value == 1) |>
+  group_by(year, Category, OA) |>
+  summarise(Count = n(), .groups = "drop") |>
+  ggplot(aes(x = year, y = Count, color = Category)) +
+  geom_line(linewidth = 1) +
+  theme_bw() +
+  facet_wrap(~OA)
+
+data_reg |>
+  filter(year > 1990) |>
+  select(year, coop, LS, SS, PS, HS) |>
+  na.omit() |> 
+  pivot_longer(cols = LS:HS, names_to = "Category", values_to = "Value") |>
+  filter(Value == 1) |>
+  group_by(year, Category, coop) |>
+  summarise(Count = n(), .groups = "drop") |>
+  ggplot(aes(x = year, y = Count, color = Category)) +
+  geom_line(linewidth = 1) +
+  theme_bw() +
+  facet_wrap(~coop)
+```
+
+## Number of outputs per year by funder
+
+### Sponsor Origins
+
+Japan and Vietnam are top funders.
+
+```{r}
+data_reg |>
+  filter(year > 1990) |>
+  select(year, asian, eu, int, us, jap, vn) |>
+  pivot_longer(cols = asian:vn, names_to = "Funder", values_to = "Value") |>
+  filter(Value == 1) |>
+  group_by(year, Funder) |>
+  summarise(Count = n(), .groups = "drop") |>
+  ggplot(aes(x = year, y = Count, color = Funder)) +
+  geom_line(linewidth = 1) +
+  theme_bw()
+```
+
+### Sponsor types
+
+
+```{r}
+data_reg |>
+  filter(year > 1990) |>
+  select(year, ind, pub, uni) |>
+  pivot_longer(cols = ind:uni, names_to = "Funder", values_to = "Value") |>
+  filter(Value == 1) |>
+  group_by(year, Funder) |>
+  summarise(Count = n(), .groups = "drop") |>
+  ggplot(aes(x = year, y = Count, color = Funder)) +
+  geom_line(linewidth = 1) +
+  theme_bw()
+
+data_reg |>
+  filter(year > 1990) |>
+  select(year, OA, coop, ind, pub, uni) |>
+  na.omit() |>
+  pivot_longer(cols = ind:uni, names_to = "Funder", values_to = "Value") |>
+  filter(Value == 1) |>
+  group_by(year, Funder, OA, coop) |>
+  summarise(Count = n(), .groups = "drop") |>
+  ggplot(aes(x = year, y = Count, color = Funder)) +
+  geom_line(linewidth = 1) +
+  theme_bw() +
+  facet_grid(OA ~ coop)
+```
+
+## Number of outputs per year by quartile
+
+```{r}
+data_reg |>
+  filter(year > 1990) |>
+  na.omit() |>
+  group_by(year, quartile) |>
+  summarise(Count = n(), .groups = "drop") |>
+  ggplot(aes(x = year, y = Count, fill = quartile)) +
+  geom_col(position = "stack") +
+  theme_bw()
+```
+
+## Number of citations
+
+
+```{r}
+ggplot(data_reg, aes(x = log1p(cited))) +
+  geom_histogram(bins = 21, color = "white") +
+  theme_bw()
+```
+
+## Comparing citations:
+
+```{r}
+# By OA
+wilcox.test(cited ~ OA, data = data_reg)
+
+# By coop
+wilcox.test(cited ~ coop, data = data_reg)
+
+# By fund or not
+wilcox.test(cited ~ fund, data = data_reg)
+
+# By quartile
+kruskal.test(cited ~ quartile, data = data_reg)
+pairwise.wilcox.test(data_reg$cited, data_reg$quartile,
+                     p.adjust.method = "bonferroni")
+
+# By number of funders origins
+kruskal.test(cited ~ n_funder, data = data_reg)
+pairwise.wilcox.test(data_reg$cited, data_reg$n_funder,
+                     p.adjust.method = "bonferroni")
+
+# By number of funders types
+kruskal.test(cited ~ n_ftype, data = data_reg)
+pairwise.wilcox.test(data_reg$cited, data_reg$n_ftype,
+                     p.adjust.method = "bonferroni")
+```
+
+Experiment
+
+
+```{r}
+# Wilcoxon test for citations
+wilcox.test(cited ~ coop, data = data_reg %>% filter(year > 1990, !is.na(cited)))
+
+# Chi-square for OA rates
+table_oa <- table(data_reg$coop, data_reg$OA)
+chisq.test(table_oa)
+
+# ANOVA/Kruskal for SJR
+kruskal.test(sjr_score ~ coop, data = data_reg %>% filter(year > 1990, !is.na(sjr_score)))
 ```
